# jsonnet-lang-for-gazelle

./: .gitignore  BUILD.bazel  CODE-OF-CONDUCT.md  CODEOWNERS  CONTRIBUTING.md  Design.rst  LICENSE.txt  NOTICE.txt  README.rst  WORKSPACE  def.bzl  deps.bzl  go.mod  go.sum  repositories.bzl  update_go_repositories.sh
.github/actions/bazel/: Dockerfile  entrypoint.sh
.github/workflows/: push.yml
example/: BUILD.bazel  README.md  WORKSPACE  clean-tests.sh  demo.jsonnet  go.mod  main.go  test.sh
example/db/: BUILD.bazel
example/test1/: a.jsonnet  b.jsonnet  c.json  data.json  demo.jsonnet  e.jsonnet
example/test2/data/: data.json
example/test2/db/: data.json
example/test2/lib/: load.libsonnet
language/jsonnet/: BUILD.bazel  config.go  config_helper.go  fileinfo.go  fileinfo_test.go  fix.go  generate.go  importer.go  importer_test.go  kinds.go  lang.go  resolve.go
language/jsonnet/fileinfo/: BUILD.bazel  fileinfo.go  fileinfo_test.go
