load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "config.go",
        "config_helper.go",
        "fileinfo.go",
        "fix.go",
        "generate.go",
        "kinds.go",
        "lang.go",
        "resolve.go",
    ],
    importpath = "github.com/bitnami/jsonnet-gazelle/language/jsonnet",
    visibility = ["//visibility:public"],
    deps = [
        "//language/jsonnet/fileinfo:go_default_library",
        "@bazel_gazelle//config:go_default_library",
        "@bazel_gazelle//label:go_default_library",
        "@bazel_gazelle//language:go_default_library",
        "@bazel_gazelle//repo:go_default_library",
        "@bazel_gazelle//resolve:go_default_library",
        "@bazel_gazelle//rule:go_default_library",
        "@com_github_juju_errors//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["fileinfo_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//language/jsonnet/fileinfo:go_default_library",
        "@bazel_gazelle//config:go_default_library",
    ],
)
